# AI-Text-Summarizer-

./: .gitignore  Docker  Dockerfile  README.md  docs.md  pyproject.toml  render.yaml  test.py
backend/: app.py  requirements.txt  summarizer.py
frontend/: index.html  requirements.txt  script.js  style.css
