[project]
name = "out"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.7.0",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "fastapi>=0.135.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-genai>=1.67.0",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.6.0",
    "langchain-core>=1.2.19",
    "langchain-groq>=1.1.2",
    "nltk>=3.9.3",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "pypdf>=6.8.0",
    "python-docx>=1.2.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.11",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
]
